# zalessio_mpc

./: CMakeLists.txt  README.md  package.xml
include/rpg_slq_mpc/: sequential_linear_quadratic.h
mpc_framework/: CMakeLists.txt  package.xml
mpc_framework/include/mpc_framework/: mpc_calculations.h  mpc_dynamics.h  mpc_framework.h  mpc_trajectories.h
mpc_framework/include/rpg_mpc/: sequential_linear_quadratic.h
mpc_framework/launch/: controller.launch  mobile_platform_detection_tracking.launch  mobile_platform_simulation.launch  mpc_framework.launch  quadrotor_platform_empty_world.launch  test_sim.launch
mpc_framework/old/: rk4_ode_solver.c  rk4_test.cpp  sequential_linear_quadratic.cpp  uav_dynamics.c  uav_dynamics_angles.c
mpc_framework/src/: mpc_calculations.cpp  mpc_dynamics.cpp  mpc_framework.cpp  mpc_trajectories.cpp  simulate_landing_platform_mobile.cpp  uav_dynamics.cpp
rapid_trajectories/: CMakeLists.txt  package.xml
rapid_trajectories/include/rapid_trajectories/: RapidTrajectoryGenerator.h
src/: rk4_ode_solver.c  rk4_test.cpp  sequential_linear_quadratic.cpp  uav_dynamics.c
