<?xml version="1.0"?>
<package>
  <name>mpc_framework</name>
  <version>0.0.0</version>
  <description>The mpc_framework package</description>

  <maintainer email="zalessio@student.ethz.ch">zalessio</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>quad_msgs</build_depend>
  <build_depend>rapid_trajectories</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>quad_msgs</run_depend>
  <run_depend>rapid_trajectories</run_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
